# Spider

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh  push.sh
doc/: protocol.md
mk/: defs.mk
msu/: Makefile
msu/include/: core.hpp  msu.hpp  network.hpp  plugin.hpp  session.hpp
msu/include/exception/: coreException.hpp
msu/include/plugin/: addrMac.hpp  key.hpp  mouse.hpp  process.hpp  timestamp.hpp
msu/src/: core.cpp  msu.cpp  network.cpp  session.cpp
msu/src/plugin/: addrMac.cpp  key.cpp  mouse.cpp  process.cpp  timestamp.cpp
server/: CMakeLists.txt  Makefile  server
server/src/: main.cpp  mainTestsServer.cpp
shared/: msu.hpp
ssl/: dh512.pem  server.crt  server.csr  server.key  server.key.secure
